--- a/CarriotsStreamExample/res/values/strings.xml
+++ b/CarriotsStreamExample/res/values/strings.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CarriotsStreamExample</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title">Push button</string>
-    <string name="action">Send a stream to Carriots</string>
-    <string name="question">Are you sure?</string>
-    <string name="btn_start">Start</string>
-    <string name="btn_stop">Stop</string>
+    <string name="app_name">Carriots</string>
+    <string name="btn_start">Iniciar</string>
+    <string name="btn_stop">Parar</string>
+    <string name="btn_email">Email</string>
 
 </resources>
